tests/unit-fail/j050a.ref
Error: CEA2
Description: Pointer difference outside the range that can be represented.
Type: Undefined behavior.
See also: C11 sec. 6.5.6
  at main(j050a.c:11)
  at <file-scope>(<unknown>)
